--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "resend": "^4.4.0",
     "sanity": "^3.86.0",
     "sonner": "^2.0.3",
+    "stripe": "^18.2.1",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3"
@@ -51,6 +53,7 @@
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^9.25.1",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
