--- a/sanity-studio/vercel.json
+++ b/sanity-studio/vercel.json
@@ -2,6 +2,5 @@
   "buildCommand": "pnpm run build",
   "outputDirectory": "dist",
   "framework": null,
-  "installCommand": "pnpm install",
-  "functions": {}
+  "installCommand": "pnpm install"
 } 
