fix: update Vercel function runtime to valid version

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "installCommand": "pnpm install",
   "functions": {
     "app/api/**/*.ts": {
-      "runtime": "nodejs18.x"
+      "runtime": "vercel-nodejs@4.0.0"
     }
   }
 } 
