--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@sanity/code-input": "^5.1.2",
+    "@sanity/desk-tool": "^2.36.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/orderable-document-list": "^1.3.4",
     "@sanity/preview-url-secret": "^2.1.8",
