--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.56.1",
     "react-player": "^2.16.0",
     "resend": "^4.4.0",
+    "rxjs": "^7.8.2",
     "sanity": "^3.86.0",
     "sonner": "^2.0.3",
     "stripe": "^18.2.1",
